# lumen

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yaml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: celery_app.py  dependencies.py  main.py
backend/app/api/: ai_features.py  annotations.py  auth.py  chat.py  citation_canvas.py  citation_map.py  discovery.py  duplicates.py  export.py  groups.py  huggingface.py  ingest.py  multi_chat.py  papers.py  relationships.py  search.py  statistics.py  tags.py  tasks.py  user_ai_providers.py  user_ai_settings.py  users.py
backend/app/core/: config.py  database.py  encryption.py  error_handlers.py  rate_limit.py  security.py
backend/app/crud/: user_ai_provider.py  user_ai_settings.py
backend/app/models/: __init__.py  annotation.py  bookmark.py  chat.py  citation_canvas.py  citation_map.py  discovery.py  group.py  multi_chat.py  paper.py  reading_session.py  refresh_token.py  saved_search.py  sharing.py  tag.py  user.py  user_ai_provider.py  user_ai_settings.py
backend/app/schemas/: ai_features.py  annotation.py  auth.py  chat.py  citation_canvas.py  citation_map.py  discovery.py  group.py  huggingface.py  multi_chat.py  paper.py  reference.py  sharing.py  user.py  user_ai_provider.py  user_ai_settings.py
backend/tests/: conftest.py  test_agents.py  test_citation_map.py  test_context.py  test_multi_provider.py  test_provider_flow.py  test_references.py  test_run_config.py  test_stream_adapter.py  test_tools.py
docs/: index.md  (+5 more)
(+414 files in other folders)
